# pvxs

./: .appveyor.yml  MANIFEST.in  building.html  cli.html  client.html  details.html  example.html  genindex.html  index.html  ioc.html  meson.build  netconfig.html  nt.html  ntscalar.html  objects.inv  overview.html  pvalink.html  pyproject.toml  qgroup.html  releasenotes.html  search.html  searchindex.js  server.html  setup.py  sharedpv.html  source.html  typedef.html  util.html  value.html
.github/workflows/: ci-scripts-build.yml  python.yml
example/: meson.build
ioc/: Makefile  meson.build
python/pvxslibs/: ioc.py  pvxs.py
src/: Makefile  client.cpp  clientdiscover.cpp  clientimpl.h  dataencode.cpp  evhelper.cpp  evhelper.h  meson.build  osiSockExt.h  pvaproto.h  server.cpp  serverconn.cpp  udp_collector.cpp  util.cpp
src/os/WIN32/: osdSockExt.cpp
src/os/default/: osdSockExt.cpp
src/pvxs/: client.h  data.h  util.h
test/: meson.build  testsock.cpp  testxcode.cpp
tools/: list.cpp  meson.build
